--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@ id: "not-found"
 ---
 
 <div>
-  <h1>Oops, that's a 404. 🙈</h1>
-  <p>Looks like this page doesn't exist. <a href="/">Return home</a> to get a fresh start.</p>
+  <h1>404</h1>
+  <p>это потеря потерь. <a href="/">Return home</a> to get a fresh start.</p>
 </div>
